# bazel-issue

./: BUILD.bazel  WORKSPACE  package-lock.json  package.json
